# gst-nori

./: .gitignore  CHANGELOG.md  CLAUDE.md  README.md  meson.build  package.sh
docs/: exposure-state-machine.md
sdk/include/Nori_Xvision_API/: Nori_Error_Define.h  Nori_Public.h  Nori_Xvision_API.h
src/: gstnori.cpp  gstnorisrc.cpp  gstnorisrc.h  nori_tag.h
tests/: test_exposure_state_machine.py
tools/: nori-ctl.cpp
